test/invalid-syntax/classy/asink-nonsense.djs
classy Foo
    asink nonsense
wow
